# homo_geo

./: readme.md  readme.txt
devel/: .catkin  _setup_util.py  setup.sh
devel/lib/example/: example_test
devel/lib/homography_geometric_control/: homo_geo  homography_from_pose  homography_publish  offboard
devel/lib/mavros_interaction/: MavrosInteractionTest
devel/lib/pkgconfig/: example.pc  homo_msgs.pc  homography_geometric_control.pc  mavros_interaction.pc  so3_control.pc  uav_state.pc
devel/share/example/cmake/: exampleConfig.cmake
devel/share/homo_msgs/cmake/: homo_msgs-msg-paths.cmake  homo_msgsConfig.cmake
devel/share/homography_geometric_control/cmake/: homography_geometric_controlConfig.cmake
devel/share/mavros_interaction/cmake/: mavros_interactionConfig.cmake
devel/share/so3_control/cmake/: so3_controlConfig.cmake
devel/share/uav_state/cmake/: uav_stateConfig.cmake
src/control/: readme.txt
src/control/example/: CMakeLists.txt  package.xml
src/control/example/src/: test.cpp
src/control/mavros_interaction/: CMakeLists.txt
src/control/mavros_interaction/src/: MavrosInteraction.cpp  (+1 more)
src/homography_geometric_control/: CMakeLists.txt  package.xml
src/homography_geometric_control/include/homography_geometric_control/: HomographyGeometricControl.h
src/homography_geometric_control/launch/: homography_geometric_control.launch  homography_pub.launch
src/homography_geometric_control/src/: HomographyGeometricControl.cpp
src/homography_geometric_control/test/: homo_geo.cpp  homography_from_pose.cpp  homography_publish.cpp  offboard.cpp
(+7 files in other folders)
